Fix for Issue #1220 issue-#1220 Paw and Paper Plane themes are missing header tabs in latest release (1.1.31).  This fixes the issue but may cause other layout issues.

--- a/include/themes/paper-plane/main.css
+++ b/include/themes/paper-plane/main.css
@@ -1810,7 +1810,7 @@ div#gtabs {
 }
 
 .maintabs nav {
-	display: none;
+	display: block;
 }
 
 .maintabs li {
